--- a/Iris_Clustering.ipynb
+++ b/Iris_Clustering.ipynb
@@ -37,7 +37,7 @@
         "#### Any mistakes made here are the sole property of I, Carson Bentley\n",
         "\n",
         "Hello wizards and welcome to week 7 of data-lit.\n",
-        "In this article we’ll be going over some of the basics of the ‘k-means clustering’ algorithm using the python library sklearn.\n",
+        "In this article we’ll be going over some of the basics of the k-means clustering algorithm using the python library sklearn.\n",
         "\n",
         "\n",
         "\n"
